# distro-burner

./: .gitignore  Cargo.toml  README.md  distro-burner.yaml  distro_burner.py
docs/superpowers/plans/: 2026-03-30-distro-burner-v2.md
docs/superpowers/specs/: 2026-03-30-distro-burner-v2-design.md
src/: main.rs
