[package]
name = "distro-burner"
version = "0.1.0"
edition = "2021"
description = "Rust launcher for distro_burner.py — download, verify, and burn Linux ISOs"

[[bin]]
name = "distro-burner"
path = "src/main.rs"

# No external crates needed: this branch is a thin wrapper around distro_burner.py.
# All logic (HTTP, SHA256, dd, progress bars) lives in the Python script.
# See the `main` branch for the self-contained pure-Rust implementation.
[dependencies]
